tests/valid/type_safety_ready_gap/inferred_let.facet
fn main() -> unrestricted () {
    let x = 1 in
    ()
}
