tests/invalid/function/local_let_rec_explicit_type_args.facet
fn main() -> unrestricted isize {
  let rec f(x: unrestricted isize) -> unrestricted isize {
    x
  }
  in (f<unrestricted isize> 1)
}
